--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     })
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
+    // Anko SQLite
+    compile "org.jetbrains.anko:anko-sqlite:0.10.1"
 }
