--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     })
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
+    compile 'com.android.support:design:26.1.0'
     // Anko SQLite
     compile "org.jetbrains.anko:anko-sqlite:0.10.1"
 }
